# src/REST-entities/user/user.router.ts
@@ -3,7 +3,7 @@ import Joi from "joi";
 import { authorize } from "../../auth/auth.controller";
 import tryCatchWrapper from "../../helpers/function-helpers/try-catch-wrapper";
 import validate from "../../helpers/function-helpers/validate";
-import { updateUserBalance } from "./user.controller";
+import { updateUserBalance, getUserInfo } from "./user.controller";
 
 const userBalanceSchema = Joi.object({
   newBalance: Joi.number().required().min(1),
@@ -17,5 +17,6 @@ router.patch(
   validate(userBalanceSchema),
   tryCatchWrapper(updateUserBalance)
 );
+router.get("/", tryCatchWrapper(authorize), tryCatchWrapper(getUserInfo));
 
 export default router;
